# neusomatic

./: .gitignore  LICENSE.md  README.md  build.sh
docker/: Dockerfile
ensemble_docker_pipelines/: README.md  prepare_callers_scripts.sh
ensemble_docker_pipelines/mutation_callers/: submit_MuSE.sh  submit_MuTect2.sh  submit_SomaticSniper.sh  submit_Strelka.sh  submit_VarDictJava.sh  submit_VarScan2.sh  submit_Wrapper.sh
neusomatic/: CMakeLists.txt
neusomatic/cpp/: CMakeLists.txt  msa.cpp  scan_alignments.cpp
neusomatic/include/: Interval.hpp  Options.h  RefSeqs.h  SeqanUtils.h  bam_variant.hpp  bedio.hpp  change_coordinates.hpp  msa.hpp  msa_options.h  msa_utils.hpp  targeted_loading.hpp  variant.hpp  vcf.h
neusomatic/models/: NeuSomatic_v0.1.0_ensemble_Dream3_70purity.pth  NeuSomatic_v0.1.0_ensemble_WEX_100purity.pth  NeuSomatic_v0.1.0_standalone_Dream3_70purity.pth  NeuSomatic_v0.1.0_standalone_WEX_100purity.pth  NeuSomatic_v0.1.4_ensemble_SEQC-WGS-GT50-SpikeWGS10.pth  NeuSomatic_v0.1.4_standalone_SEQC-WGS-GT50-SpikeWGS10.pth
neusomatic/python/: call.py  dataloader.py  defaults.py  extend_features.py  extend_stanalone_features.py  extract_postprocess_targets.py  filter_candidates.py  generate_dataset.py  genomic_file_handlers.py  long_read_indelrealign.py  merge_post_vcfs.py  merge_tsvs.py  network.py  postprocess.py  preprocess.py  read_callers_vcf.py  read_info_extractor.py  resolve_scores.py  resolve_variants.py  scan_alignments.py  sequencing_features.py  split_bed.py  train.py  utils.py
other_callers_docker_pipelines/: README.md  prepare_callers_scripts.sh
other_callers_docker_pipelines/mutation_callers/: submit_SomaticSniper.sh
resources/: b37.bed  hg19.bed  hg38.bed
seqc2_paper/: README.md
seqc2_paper/data/: test_region_WES.bed  test_region_WGS.bed  train_region.bed
seqc2_paper/evaluation_scripts/: README.md  evaluate.sh  exclude_from_vcf.py  extract_info_bam.py
seqc2_paper/models/: NeuSomatic_v0.1.3_ensemble_Dream3.pth  NeuSomatic_v0.1.3_standalone_Dream3.pth  NeuSomatic_v0.1.4_ensemble_SEQC-WGS-GT-50.pth  NeuSomatic_v0.1.4_ensemble_SEQC-WGS-Spike.pth  NeuSomatic_v0.1.4_standalone_SEQC-WGS-GT-50.pth  NeuSomatic_v0.1.4_standalone_SEQC-WGS-Spike.pth
test/: NeuSomatic_ensemble.vcf  NeuSomatic_standalone.vcf  docker_test.sh  ensemble.tsv  normal.bam  normal.bam.bai  region.bed  run_test.sh  t.vcf  tumor.bam  tumor.bam.bai
test/aa/dataset/work.0/: candidates_0.tsv  candidates_0.tsv.idx  none.vcf  pred_0.vcf  region_0.bed  truth_0.vcf  var.vcf
test/aa/work_normal/work.0/: candidates.vcf  count.bed.gz.tbi  scan.err
test/aa/work_tumor/: all_regions.bed  candidates_region_0.bed
test/aa/work_tumor/work.0/: candidates.vcf  count.bed.gz.tbi  filtered_candidates.vcf  region.bed  scan.err
